[package]
name = "dav-server"
version = "0.5.8"
readme = "README.md"
description = "Rust WebDAV server library. A fork of the webdav-handler crate."
repository = "https://github.com/messense/dav-server-rs"
authors = ["Miquel van Smoorenburg <mike@langeraar.net>", "messense <messense@icloud.com>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["webdav"]
categories = ["web-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
features = ["full"]

[features]
default = ["localfs", "memfs"]
actix-compat = [ "actix-web" ]
warp-compat = [ "warp", "hyper" ]
all = [ "actix-compat", "warp-compat" ]
localfs = ["libc", "lru", "parking_lot"]
memfs = ["libc"]

[[example]]
name = "actix"
required-features = [ "actix-compat" ]

[[example]]
name = "warp"
required-features = [ "warp-compat" ]

[[example]]
name = "hyper"
required-features = [ "warp-compat" ]

[dependencies]
async-stream = "0.3.5"
axum = "0.7.4"
bytes = "1.5.0"
futures-channel = "0.3.30"
futures-util = "0.3"
headers = "0.4.0"
htmlescape = "0.3.1"
http = "1.0.0"
http-body = "1.0.0"
http-body-util = "0.1.0"
lazy_static = "1.4.0"
log = "0.4.20"
mime_guess = "2.0.4"
percent-encoding = "2.3.1"
pin-project = "1.1.4"
pin-utils = "0.1.0"
regex = "1.10.3"
time = { version = "0.3.33", default-features = false, features = [ "macros", "formatting" ] }
tokio = { version = "1.36.0", features = [ "rt-multi-thread", "io-util", "net", "time", "sync" ] }
url = "2.5.0"
uuid = { version = "1.7.0", features = ["v4"] }
xml-rs = "0.8.19"
xmltree = "0.10.3"
hyper-util = { version = "0.1.3", features = ["tokio", "service"] }

lru = { version = "0.12.2", optional = true }
libc = { version = "0.2.153", optional = true }
parking_lot = { version = "0.12.1", optional = true }

hyper = { version = "1.1.0", optional = true }
warp = { version = "0.3.6", optional = true, default-features = false }
actix-web = { version = "4.4.1", optional = true }

[dev-dependencies]
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.1"
hyper = { version = "1.1.0", features = [ "http1", "server" ] }
tokio = { version = "1.36.0", features = ["full"] }
